# parallel-clique-enumeration

./: CMakeLists.txt  README.md
data/: simple.mtx
include/: BKTask.h  Graph.h  MemChunk.h  MemUsageLogger.h  SetImplementation.h  SimpleHashSet.h  SimpleHashTable.h  UnrolledList.h  utils.h
src/: BKTask.cpp  BronKerboschTBB.cpp  Graph.cpp  UnrolledList.cpp  main.cpp
